# More-Modern-CMake

./: LICENSE  README.md
example-2.8.10/: CMakeLists.txt
example-2.8.10/app/: CMakeLists.txt
example-3.10/: CMakeLists.txt
example-3.10/app/: CMakeLists.txt
example-3.11/: CMakeLists.txt
example-3.11/app/: CMakeLists.txt
example-3.11/app/src/: main.cpp
example-3.12/: CMakeLists.txt
example-3.12/app/: CMakeLists.txt
